# geo-dist

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  filter_geonames.py  geonode.py  node_tree.py  requirements.txt  run.sh
geo-dist-prep/: pyproject.toml
geo-dist-prep/src/geo_dist_prep/: create_data.py  create_pairs.py  filter_geonames.py  geohash_tree.py  node_tree.py  normalize.py  utils.py
geo-dist-prep/src/geo_dist_prep/data/: __init__.py  build.py  enrich.py  extract.py  filter.py  load.py  normalize.py  pair.py  populate_tree.py  score.py
geo-dist-prep/src/geo_dist_prep/data/docker/: create.py  docker-compose.yml  ors-config.json  regions.py  run.py
geo-dist-prep/src/geo_dist_prep/geonode/: geonode.py  tree.py
geo-dist-prep/src/geo_dist_prep/geotree/: data.py  node.py  tree.py
geo-dist-prep/src/geo_dist_prep/model/: model.py  normalize.py  train.py  view.py  visualize.py
geo-dist-prep/src/geo_dist_prep/schemas/: filtered.py  geo_names.py  geoname.py  geoname_pair.py  helpers.py  job.py  training_data.py
geo-dist-prep/src/geo_dist_prep/tree/: globe.py  node.py  pos.py  render.py  storage.py  struct.py  triangle.py
geo-dist-prep/tests/: test_filter_geonames.py
geo-dist-prep/tests/geotree/: test_location_to_pos.py
geo-dist-prep/tests/tree/: test_globe.py  test_triangle.py  test_visualize.py
geo-dist-prep/tests/utils/: test_bisection_sort.py
notebooks/: collect.ipynb  database.ipynb  grid.ipynb  train.ipynb  tree-stats.ipynb
openrouteservice/: docker-compose.yml
openrouteservice/docker/: .gitignore
(+1 files in other folders)
